# GuigoLangCPP

./: CMakeLists.txt  main.cpp  readme.md
compiler/component/: IIOComponent.h  IOComponent.h
compiler/error/: GuigoError.cpp  GuigoError.h
compiler/execption/: UnexpectedInputType.h
compiler/expressions/: BinaryExpression.h  ExpressionVisitor.h  GroupExpression.h  LiteralExpression.h  UnaryExpression.h
compiler/file/: GuigoFile.cpp  GuigoFile.h
compiler/interpreter/: InterpretedData.h  Interpreter.h
compiler/lexer/: Token.cpp  Token.h
compiler/parser/: ParsedData.cpp  ParsedData.h  Parser.cpp  Parser.h
compiler/pass/: CompilationPass.h  ICompilationPass.h
compiler/pipeline/: CompilationPipeline.h
compiler/scanner/: ScannedData.cpp  ScannedData.h  Scanner.cpp  Scanner.h
core/src/: main.cpp
error/: GuigoError.cpp  GuigoError.h  GuigoErrorCode.h
expressions/: BinaryExpression.cpp  BinaryExpression.h  Expression.h  LiteralExpression.h  UnaryExpression.h
interpreter/: Interpreter.h
lexer/: Token.cpp  Token.h  TokenType.h
parser/: Parser.cpp
res/: guigo.grammar
scanner/: Scanner.cpp  Scanner.h
